# tfrecord-writer

./: CMakeLists.txt  README.md
tfrecord/: CMakeLists.txt  coding.cpp  crc32c.cpp  example.pb.cc  example.pb.h  feature.pb.cc  feature.pb.h  record_writer.cpp  record_writer.h  record_writer_test.cpp
